Changed work experience

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,11 +10,11 @@
             <div class="row">
                 <div class="col-lg-4 ">
                     <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="img/profile.png" width="58%" align="middle"><h3>Brief Overview </h3> I am Senthil Palanisamy. I was born and brought up in India. I moved to US in August 2019 to begin my Masters in Robotics at Northwestern. My undergraduation was in electronics and then I worked for about 3 years in computer vision. Right now, I get excited about solving robotics problems involving computer vision. 
+                    <img src="img/profile.png" width="58%" align="middle"><h3>Brief Overview </h3> I am Senthil Palanisamy. I was born and brought up in India. I moved to US in August 2019 to begin my Masters in Robotics at Northwestern. I am currently working with Geomagical labs and hold more than 5 years of computer vision expereince across all realms of computer vision including classical, deep learning and geometric. I have both worked with cloud based systems and real time algorithms that need to be deployed on edge devices. I naturally get drawn towards 3D computer vision probelms, where my innate interest and the skills I have developed over in Mathematics is put to good use. 
                 </div>
                 <div class="col-lg-4">
 	                <h3>Education </h3> <ul><li>Bachelor of Engineering in Electronics & Communication - Anna University (Graduated May 2016.)</li><li>Master of Science in Robotics - Northwestern University (Expected Graduation Dec 2020)</li></ul>
-                    <p><h3>Experience: 3 Years </h3> <ul><li> TartanSense | Robotics Engineer - (March - July 2019)</li><li> Soliton Technologies | Computer Vision R&D Engineer(May 2016- Feb 2019)</li></ul> For more information about this experience please see my resume (button below).<br></p>
+                  <p><h3>Experience: 5 Years </h3> <ul><li> TartanSense | Robotics Engineer - (March - July 2019)</li><li> Soliton Technologies | Computer Vision R&D Engineer(May 2016- Feb 2019)</li><li>Softwear Automation | Computer Vision Engineer (Dec 2020 - Jun 2021)</li><li>Geomagical labs | Applied Research Engineer (August 2021 - Present)</ul> For more information about this experience please see my resume (button below).<br></p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="files/resume.pdf" target="_blank" class="btn btn-lg btn-outline">
